--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,11 @@
       <a href="/survey" style="text-decoration: underline; font-weight: bold">Climb!</a>
       <a href="/sessions">Sessions</a>
       <a href="/forum">Forum</a>
-      <a href="/login">Login</a>
+      <% if (userID) { %>
+        <a href="/logout">Logout</a>
+      <% } else { %>  
+        <a href="/login">Login</a>
+      <% } %>
     </nav>
   </div>
 </header>
