--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
       <a href="/">Home</a>
       <a href="/about">About</a>
       <a href="/survey" style="text-decoration: underline; font-weight: bold">Climb!</a>
-      <a href="/sessions">Sessions</a>
+      <a href="/climbs/sessions">Sessions</a>
       <a href="/forum">Forum</a>
       <% if (userID) { %>
         <a href="/logout">Logout</a>
