functioning add climb and sessions related to current user

--- a/views/climbadded.ejs
+++ b/views/climbadded.ejs
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
   <head>
-    <title>Registered!</title>
+    <title>Climb added!</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body class="body">
     <%- include('partials/header') %>
     <div class="page-content">
       <div class="login-container">
-        <h1>Register for <%= appName %></h1>
-        <p>Account successefully registered!</p>
+        <h1>Climb Added!</h1>
+        <p>Climb successfully added!</p>
+        <p><a href="/climbs/add">Add another?</a></p>
         <p><a href="/">Back to home</a></p>
       </div>
     </div>
