--- a/views/climbadded.ejs
+++ b/views/climbadded.ejs
@@ -4,10 +4,10 @@
     <title>Climb added!</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
-  <body class="body">
+  <body class="body home-body">
     <%- include('partials/header') %>
     <div class="page-content">
-      <div class="login-container">
+      <div class="home-login-container">
         <h1>Climb Added!</h1>
         <p>Climb successfully added!</p>
         <p><a href="/climbs/add">Add another?</a></p>
