--- a/views/registered.ejs
+++ b/views/registered.ejs
@@ -4,13 +4,13 @@
     <title>Registered!</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
-  <body class="body">
+  <body class="body site-body">
     <%- include('partials/header') %>
     <div class="page-content">
-      <div class="login-container">
-        <h1>Register for <%= appName %></h1>
-        <p>Account successefully registered!</p>
-        <p><a href="/">Back to home</a></p>
+      <div class="site-login-container">
+        <h1 class="site-title">Register for <%= appName %></h1>
+        <p class="site-lead">Account successfully registered!</p>
+        <p class="site-forum-link"><a href="/">Back to home</a></p>
       </div>
     </div>
   </body>
