--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,18 +4,24 @@
     <title>Login</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
-  <body class="body">
+  <body class="body climb-body">
     <%- include('partials/header') %>
     <div class="page-content">
-      <div class="login-container">
-        <h1>Login</h1>
-        <form method="POST" action="loggedin">
-          <p>Username or email: <input id="username" type="text" name="username" /></p>
-          <p>Password: <input id="password" type="password" name="password" /></p>
-          <input type="submit" value="Login" />
+      <div class="site-login-container">
+        <h1 class="site-title">Login</h1>
+        <form class="site-form" method="POST" action="loggedin">
+          <div class="site-form-row">
+            <label for="username">Username or email</label>
+            <input id="username" type="text" name="username" required />
+          </div>
+          <div class="site-form-row">
+            <label for="password">Password</label>
+            <input id="password" type="password" name="password" required />
+          </div>
+          <button type="submit" class="cta-btn">Login</button>
         </form>
-        <p>Don't have an account? <a href="/register">Register!</a></p>
-        <p><a href="/">Back to home</a></p>
+        <p class="site-forum-link" style="margin-top: 16px;">Don't have an account? <a href="/register">Register!</a></p>
+        <p class="site-forum-link"><a href="/">Back to home</a></p>
       </div>
     </div>
   </body>
