test data update and style fix

--- a/views/climbadded.ejs
+++ b/views/climbadded.ejs
@@ -4,14 +4,14 @@
     <title>Climb added!</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
-  <body class="body home-body">
+  <body class="body site-body">
     <%- include('partials/header') %>
     <div class="page-content">
-      <div class="home-login-container">
-        <h1>Climb Added!</h1>
-        <p>Climb successfully added!</p>
-        <p><a href="/climbs/add">Add another?</a></p>
-        <p><a href="/">Back to home</a></p>
+      <div class="site-login-container">
+        <h1 class="site-title">Climb Added!</h1>
+        <p class="site-lead">Climb successfully added!</p>
+        <p class="site-forum-link"><a href="/climbs/add">Add another?</a></p>
+        <p class="site-forum-link"><a href="/">Back to home</a></p>
       </div>
     </div>
   </body>
