--- a/views/createpost.ejs
+++ b/views/createpost.ejs
@@ -10,7 +10,7 @@
     <div class="page-content">
         <div class="site-login-container">
             <h1 class="site-title">Make a post to the forum.</h1>
-            <form class="site-form" action="<%= basePath %>forum/posted" method="POST">
+            <form class="site-form" action="/forum/posted" method="POST">
             <div class="site-form-row">
                 <label for="title">Post title:</label>
                 <input type="text" id="title" name="title" required>
